# ThunderDashboardLibrary

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: util.cmake
include/ThunderDashboard/: dashboard.h  font_manager.h  nt_handler.h
include/ThunderDashboard/pages/: camera_page.h  page.h
include/ThunderDashboard/platform/: platform.h
include/ThunderDashboard/platform/linux/: linux.h
include/ThunderDashboard/platform/macos/: macos.h
include/ThunderDashboard/platform/windows/: windows.h
include/ThunderDashboard/popups/: popup.h
include/ThunderDashboard/services/: service.h
lib/: CMakeLists.txt  dashboard.cpp  main.cpp  nt_handler.cpp
lib/pages/: CMakeLists.txt  camera_page.cpp
lib/platform/: CMakeLists.txt  platform.cpp
lib/platform/linux/: CMakeLists.txt  linux.cpp
lib/platform/macos/: CMakeLists.txt  macos.mm
lib/platform/windows/: CMakeLists.txt  windows.cpp
